--- a/bank/templates/login.html
+++ b/bank/templates/login.html
@@ -6,16 +6,16 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
                 <div class="form-group">
-                    {{ form.CPR_number.label(class="form-control-label") }}
-                    {% if form.CPR_number.errors %}
-                        {{ form.CPR_number(class="form-control form-control-lg is-invalid") }}
+                    {{ form.id.label(class="form-control-label") }}
+                    {% if form.id.errors %}
+                        {{ form.id(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
-                            {% for error in form.CPR_number.errors %}
+                            {% for error in form.id.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.CPR_number(class="form-control form-control-lg") }}
+                        {{ form.id(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
@@ -39,8 +39,15 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
-            <small class="text-muted ml-2">
+            <small class="text-muted">
                 <a href="#">Forgot Password?</a>
+            </small>
+            <small class="text-muted ml-2">
+                {% if is_employee %}
+                    <a href="/login?is_employee=false">Customer login?</a>
+                {% else %}
+                    <a href="/login?is_employee=true">Employee login?</a>
+                {%  endif %}
             </small>
         </form>
     </div>
