CUS4-4 Model retrieval of resultset confirmed

--- a/bank/templates/invest.html
+++ b/bank/templates/invest.html
@@ -3,15 +3,73 @@
     <h1>{{ current_user.name }}</h1>
 	
   <div class="content-section">	
-    <p> A specific investment accounts listed (3): {{inv_acc_list[3]}}</p>
-    <p>Investment accounts:</p>
+    <p>Investment account tuples:</p>
     <ul class="list-group">
       {% for n in inv_acc_list %}
-      <li class="list-group-item list-group-item-light">{{n}} {{n[4]}} {{n[1]}}</li>
+      <li class="list-group-item list-group-item-light">{{n}}}</li>
       {% endfor %}
     </ul>
     <br>
     <p>Same list with a filter: {{ inv_acc_list|join(', ') }}</p>
+  </div>
+
+  <div class="content-section">	
+    <p>Investment accounts:</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">account_number</th>
+          <th scope="col">cpr_number</th>
+          <th scope="col">created_date</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for n in inv_acc_list %}
+        <tr>
+          <th scope="row">{{n[0]}}</th>
+          <td>{{n[1]}}</td>
+          <td>{{n[2]}}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>  
+  </div>
+  <div class="content-section">	
+    <p>Investment account tuples:</p>
+    <ul class="list-group">
+      {% for n in inv_cd_list %}
+      <li class="list-group-item list-group-item-light">{{n}} </li>
+      {% endfor %}
+    </ul>
+    <br>
+    <p>Same list with a filter: {{ inv_acc_list|join(', ') }}</p>
+  </div>
+  <div class="content-section">	
+    <p>Investment certificats of deposit:</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">acc</th>
+          <th scope="col">cd_number</th>
+          <th scope="col">start_date</th>
+          <th scope="col">maturity_date</th>
+          <th scope="col">rate</th>
+          <th scope="col">amount</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for n in inv_cd_list %}
+        <tr>
+          <th scope="row">{{n[0]}}</th>
+          <td>{{n[3]}}</td>
+          <td>{{n[4]}}</td>
+          <td>{{n[5]}}</td>
+          <td>{{n[6]}}</td>
+          <td>{{n[7]}}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>  
   </div>
 	
 {% endblock content %}
