--- a/bank/templates/transfer.html
+++ b/bank/templates/transfer.html
@@ -4,6 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <div class="form-group">
+                {{ form.sourceAccount.label(class="form-control-label") }}
                 {{ form.sourceAccount(class="form-control")}}
             </div>
             <fieldset class="form-group">
@@ -22,7 +23,8 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.sourceAccount(class="form-control")}}
+                {{ form.targetAccount.label(class="form-control-label") }}
+                {{ form.targetAccount(class="form-control") }}
             </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
