--- a/bank/templates/layout.html
+++ b/bank/templates/layout.html
@@ -27,6 +27,21 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('Login.home') }}">Home</a>
+              {% if current_user.is_authenticated %}
+                <li class="dropdown">
+                 <a href="#" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">UIS bank<b class="caret"></b></a>
+                 <ul class="dropdown-menu">
+                    <li><a class="nav-item nav-link" href="{{ url_for('Login.account') }}">Account</a></li>
+                    <li><a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a></li>
+                    <li class="divider"></li>
+                    <li><a class="nav-item nav-link" href="{{ url_for('Customer.invest') }}">Investments</a></li>
+                    <li class="divider"></li>
+                    <li><a class="nav-item nav-link" href="https://www.pgadmin.org">site pgAdmin</a></li>
+                    <li><a class="nav-item nav-link" href="http://127.0.0.1:58653/browser/ ">pgAdmin4</a></li>
+                 </ul>
+               </li>
+              {% else %}
+              {% endif %}
               <a class="nav-item nav-link" href="{{ url_for('Login.about') }}">About</a>
             </div>
             <!-- Navbar Right Side -->
