--- a/bank/templates/invest.html
+++ b/bank/templates/invest.html
@@ -2,16 +2,6 @@
 {% block content %}
     <h1>{{ current_user.name }}</h1>
 	
-  <div class="content-section">	
-    <p>Investment account tuples:</p>
-    <ul class="list-group">
-      {% for n in inv_acc_list %}
-      <li class="list-group-item list-group-item-light">{{n}}}</li>
-      {% endfor %}
-    </ul>
-    <br>
-    <p>Same list with a filter: {{ inv_acc_list|join(', ') }}</p>
-  </div>
 
   <div class="content-section">	
     <p>Investment accounts:</p>
@@ -20,29 +10,21 @@
         <tr>
           <th scope="col">account_number</th>
           <th scope="col">cpr_number</th>
-          <th scope="col">created_date</th>
+          <th scope="col">account created</th>
+          <th scope="col">deposit total (CD)</th>
         </tr>
       </thead>
       <tbody>
-      {% for n in inv_acc_list %}
+      {% for n in inv_sums %}
         <tr>
           <th scope="row">{{n[0]}}</th>
           <td>{{n[1]}}</td>
           <td>{{n[2]}}</td>
+          <td>{{n[3]}}</td>
         </tr>
       {% endfor %}
       </tbody>
     </table>  
-  </div>
-  <div class="content-section">	
-    <p>Investment account tuples:</p>
-    <ul class="list-group">
-      {% for n in inv_cd_list %}
-      <li class="list-group-item list-group-item-light">{{n}} </li>
-      {% endfor %}
-    </ul>
-    <br>
-    <p>Same list with a filter: {{ inv_acc_list|join(', ') }}</p>
   </div>
   <div class="content-section">	
     <p>Investment certificats of deposit:</p>
@@ -71,5 +53,6 @@
       </tbody>
     </table>  
   </div>
+
 	
 {% endblock content %}
