--- a/bank/templates/layout.html
+++ b/bank/templates/layout.html
@@ -48,12 +48,12 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('Login.account') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('Login.register') }}">Add customer</a>
                 <a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a>
                 <a class="nav-item nav-link" href="{{ url_for('Customer.invest') }}">Investments</a>
                 <a class="nav-item nav-link" href="{{ url_for('Login.logout') }}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('Login.login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('Login.register') }}">Register</a>
               {% endif %}
             </div>
           </div>
