--- a/bank/templates/layout.html
+++ b/bank/templates/layout.html
@@ -32,7 +32,7 @@
                  <a href="#" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">UIS bank<b class="caret"></b></a>
                  <ul class="dropdown-menu">
                     <li><a class="nav-item nav-link" href="{{ url_for('Login.account') }}">Account</a></li>
-                    <li><a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a></li>
+                    <li><a class="nav-item nav-link" href="{{ url_for('Employee.transfer') }}">Transfer</a></li>
                     <li class="divider"></li>
                     <li><a class="nav-item nav-link" href="{{ url_for('Customer.invest') }}">Investments</a></li>
                     <li class="divider"></li>
@@ -49,7 +49,7 @@
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('Login.account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('Login.register') }}">Add customer</a>
-                <a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a>
+                <a class="nav-item nav-link" href="{{ url_for('Employee.transfer') }}">Transfer</a>
                 <a class="nav-item nav-link" href="{{ url_for('Customer.invest') }}">Investments</a>
                 <a class="nav-item nav-link" href="{{ url_for('Login.logout') }}">Logout</a>
               {% else %}
