--- a/bank/templates/about.html
+++ b/bank/templates/about.html
@@ -12,7 +12,7 @@
 		<li>finn</li>
 		<li>marcos</li>
 	</ul>
-	<p>To log in we have created some test accounts. The customer login can be accesed using a customer cpr in ranges 5001 to 5007 with the token 'UIS' in capital. The employee login can be accessed using employee id 6001..6007 and the same token.</p>
+	<p>You can register new customer accounts, but employee accouns must be entered by making your changes to the DML-script schema_ins.sql. To log in we have created some test accounts. The customer login can be accesed using a customer cpr in ranges 5001 to 5007 with the token 'UIS' in capital. The employee login can be accessed using employee id 6001..6007 and the same token.</p>
 	<p>To add more sample data make your changes to the DML-script schema_ins.sql.</p>
 	<p>The prototype is vertical. We have implemented some functions and not completed. The prototype provides a starting point for your work.</p> 
 {% endblock content %}
