--- a/bank/templates/layout_acc.html
+++ b/bank/templates/layout_acc.html
@@ -53,7 +53,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('Login.logout') }}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('Login.login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('Login.register') }}">Register</a>
+                <a class="nav-item nav-link" href="{{ url_for('Employee.addcustomer') }}">Register</a>
               {% endif %}
             </div>
           </div>
