Opdatering af data jf. uis-møde d. 4/4/2022

--- a/bank/templates/invest.html
+++ b/bank/templates/invest.html
@@ -4,6 +4,27 @@
 	
 
   <div class="content-section">	
+    <p>Investments:</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">account_number</th>
+          <th scope="col">cpr_number</th>
+          <th scope="col">creation date</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for n in inv %}
+        <tr>
+          <th scope="row">{{n[0]}}</th>
+          <td>{{n[1]}}</td>
+          <td>{{n[2]}}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>  
+  </div>
+  <div class="content-section">	
     <p>Investment accounts:</p>
     <table class="table table-striped">
       <thead>
