--- a/bank/templates/about.html
+++ b/bank/templates/about.html
@@ -1,20 +1,30 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
-	<p>This is the UIS prototype brought to you by the UIS team 2018/19.</p>
+	<p>Dette er UIS-prototypen bragt til dig af UIS-holdet 2021/2022:</p>
 	<ul>
-		<li>Ziming Lou</li>
-		<li>Lasse Pedersen</li>
-		<li>Jan Rolandsen</li>
+		<li style="color: gray;">Ziming Lou</li>
+		<li style="color: gray;">Lasse Pedersen</li>
+		<li style="color: gray;">Jan Rolandsen</li>
+		<li style="color: gray;">Marco Ugo Gambetta</li>
 		<li>Hubert Dariusz Zajac</li>
-		<li>Marco Ugo Gambetta</li>
 		<li>Anders Lassen</li>
 		<li>Finn Kensing</li>
 		<li>Marcos Vas Salles</li>
+		<li>Pax Ravn</li>
+		<li>Nadja Petersen</li>
+		<li>Rikke Vesterbæk Nielsen</li>
 	</ul>
-	<p>You can register new customer accounts, but employee accouns must be entered by making your changes to the DML-script schema_ins.sql. To log in we have created some test accounts. The customer login can be accesed using a customer cpr in ranges 5001 to 5007 with the token 'UIS' in capital. The employee login can be accessed using employee id 6001..6007 and the same token.</p>
+	
+	<p>I kan registrere nye kundekonti, men medarbejderkonti skal indtastes ved at foretage jeres ændringer i DML-scriptet schema_ins.sql. For at logge ind har vi oprettet nogle testkonti. Kunde-login kan tilgås ved hjælp af et kunde-cpr i intervallerne 5001 til 5007 med adgangskoden "UIS" med store bogstaver. Medarbejder-login kan tilgås ved hjælp af medarbejder-id 6001..6007 og samme adgangskode.</p>
+	<p>For at tilføje flere eksempeldata skal du foretage dine ændringer i DML-scriptet schema_ins.sql.</p>
+	<p>Prototypen er vertikal. Vi har implementeret nogle funktioner, men projektet er ufuldstændigt. Prototypen giver et udgangspunkt for jeres arbejde.</p>
+	
+	<p><b>EN:</b></p>
+	
+	<p>You can register new customer accounts, but employee accounts must be entered by making your changes to the DML-script schema_ins.sql. To log in we have created some test accounts. The customer login can be accesed using a customer cpr in ranges 5001 to 5007 with the password 'UIS' in uppercase. The employee login can be accessed using employee id 6001..6007 and the same password.</p>
 	<p>To add more sample data make your changes to the DML-script schema_ins.sql.</p>
 	<p>The prototype is vertical. We have implemented some functions and not completed. The prototype provides a starting point for your work.</p> 
-	<p>AL20190501</p>
+	<p>AL/PR 20220504</p>
 {% endblock content %}
 
