--- a/bank/templates/transfer.html
+++ b/bank/templates/transfer.html
@@ -33,7 +33,7 @@
     </div>
 	
     <div class="content-section">	
-      <p>dropdown cusrtomer account tuples:</p>
+      <p>Dropdown customer account tuples:</p>
       <ul class="list-group">
         {% for n in drop_cus_acc %}
         <li class="list-group-item list-group-item-light">{{n}}}</li>
