CUS7 view investment accounts - customer part

--- a/bank/templates/account.html
+++ b/bank/templates/account.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>{{ current_user.name }}</h1>
+    <h4><font color="red">Note: This page should  be accessible by customers and employees!</font></h4>
 {% endblock content %}
