--- a/bank/templates/addcustomer.html
+++ b/bank/templates/addcustomer.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <h4><font color="tomato">Note: This page should only be accessible by employes!</font></h4> 
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
