--- a/bank/templates/login.html
+++ b/bank/templates/login.html
@@ -52,9 +52,9 @@
         </form>
 
     </div>
-    <div class="content-section">	
-      <legend class="border-bottom mb-4">SPIKE: Log In </legend>
-      <p>Select a user from a role to log on. The users are seperatd into teachers, parents, students from the aula project. For the bank project we map this to employees and customers:</p>
+    <div class="content-section">
+      <legend class="border-bottom mb-4">SPIKE-CUS1-2: Log In </legend>
+      <p>Select a user from a role to log on. The users are seperated into teachers, parents, students from the aula project. For the bank project we map this to employees and customers:</p>
       <form action="/login" method="POST">
         <table class="table table-striped">
          <thead>
@@ -78,7 +78,7 @@
           </tr>
         {% endfor %}
        </tbody>
-    </table>  
+    </table>
         <table class="table table-striped">
          <thead>
           <tr>
@@ -101,7 +101,7 @@
           </tr>
          {% endfor %}
        </tbody>
-    </table>  
+    </table>
         <table class="table table-striped">
          <thead>
           <tr>
@@ -124,13 +124,13 @@
           </tr>
          {% endfor %}
        </tbody>
-    </table>  
+    </table>
     <div class="form-group">
         {{ form.submit(class="btn btn-outline-info") }}
         <input type="submit" value="Login">
     </div>
-      </form> 
+      </form>
     </div>
-	
- 	
+
+
 {% endblock content %}
