--- a/bank/templates/layout.html
+++ b/bank/templates/layout.html
@@ -49,15 +49,14 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('Login.account') }}">Account</a>
-
-			   {% if "customer" == role %}
+			          {% if "customer" == role %}
                 <a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a>
                 <a class="nav-item nav-link" href="{{ url_for('Customer.invest') }}">Investments</a>
- 			   {% endif %}
-		       {% if role == 'employee' %}
+ 			          {% endif %}
+		            {% if role == 'employee' %}
                 <a class="nav-item nav-link" href="{{ url_for('Employee.addcustomer') }}">Add customer</a>
                 <a class="nav-item nav-link" href="{{ url_for('Employee.investe') }}">Investments</a>
- 			   {% endif %}
+ 			          {% endif %}
 
                 <a class="nav-item nav-link" href="{{ url_for('Login.logout') }}">Logout</a>
               {% else %}
@@ -88,10 +87,10 @@
             <h3>Account</h3>
               <ul class="list-group">
               {% if current_user.is_authenticated %}
-			    
-				
+
 			   {% if "customer" == role %}
-			        <p>UIS Prototype-customer</p> 
+			        <p>UIS Prototype-customer</p>
+                <li class="list-group-item list-group-item-light">Accounts</li>
                 <li class="list-group-item list-group-item-light"><a class="nav-item nav-link" href="{{ url_for('Customer.transfer') }}">Transfer</a></li>
                 <li class="list-group-item list-group-item-light">Checking Accounts</li>
                 <li class="list-group-item list-group-item-light">Investment Accounts</li>
@@ -100,18 +99,20 @@
 
 
 			      {% if role == 'employee' %}
-			        <p>UIS Prototype-emp</p> 
+			        <p>UIS Prototype-emp</p>
+                <li class="list-group-item list-group-item-light">Accounts</li>
                 <li class="list-group-item list-group-item-light">Transfer</li>
                 <li class="list-group-item list-group-item-light">Checking Accounts</li>
                 <li class="list-group-item list-group-item-light">Investment Accounts</li>
                 <li class="list-group-item list-group-item-light"><a class="nav-item nav-link" href="{{ url_for('Employee.investe') }}">View investment accounts</a></li>
  			      {% endif %}
-				
-				
+
+
                <li class="list-group-item list-group-item-light">etc</li>
+              <!--
               {% else %}
                 <li class="list-group-item list-group-item-light">etc</li>
-              {% endif %}
+              {% endif %} -->
               </ul>
             </p>
           </div>
