--- a/bank/templates/layout.html
+++ b/bank/templates/layout.html
@@ -109,10 +109,10 @@
 
 
                <li class="list-group-item list-group-item-light">etc</li>
-              <!--
+
               {% else %}
                 <li class="list-group-item list-group-item-light">etc</li>
-              {% endif %} -->
+              {% endif %}
               </ul>
             </p>
           </div>
