--- a/bank/templates/direct.html
+++ b/bank/templates/direct.html
@@ -54,16 +54,16 @@
     </div>
     <div class="content-section">
       <legend class="border-bottom mb-4">SPIKE-CUS1-2: Log In </legend>
-      <p>Select a user from a role to log on. The users are seperated into teachers, parents, students from the aula project. For the bank project we map this to employees and customers:</p>
+      <p>Select a user from a role to log on. The users are seperated into employees and customers:</p>
       <form action="/login" method="POST">
         <table class="table table-striped">
          <thead>
           <tr>
-          <h5>Teachers</h5>
+          <h5>Employees</h5>
 	      </tr>
           <tr>
             <th scope="col"></th>
-            <th scope="col">Teacher (role: employee)</th>
+            <th scope="col">Employee (role: employee)</th>
           </tr>
           </thead>
        <tbody>
@@ -82,7 +82,7 @@
         <table class="table table-striped">
          <thead>
           <tr>
-          <h5>Parents</h5>
+          <h5>Customers</h5>
 	      </tr>
           <tr>
             <th scope="col"></th>
@@ -90,14 +90,18 @@
           </tr>
           </thead>
        <tbody>
-        {% for p in parents %}
+        {% for p in customers %}
  <tr>
 <td>
           <input type="radio" id="{{ p.id }}" name="ID" value="{{ p.id }}">
             </td>
 			<td>
-          <label for="{{ p.id }}">{{ p.name }}</label><br>
+          <label for="{{ p.id }}">{{ p.name }}</label>
             </td>
+			<td>
+				{{ p.address }}
+			</td>
+			
           </tr>
          {% endfor %}
        </tbody>
@@ -116,11 +120,14 @@
         {% for s in students %}
           <tr>
 			<td>
-           <input type="radio" id="{{ s.id }}" name="ID" value="{{ s.id }}">
+              <input type="radio" id="{{ s.id }}" name="ID" value="{{ s.id }}">
             </td>
 			<td>
-          <label for="{{ s.id }}">{{ s.name }}</label><br>
+              <label for="{{ s.id }}">{{ s.name }}</label>
             </td>
+			<td>
+				{{ s.name }}
+			</td>
           </tr>
          {% endfor %}
        </tbody>
