--- a/bank/templates/login.html
+++ b/bank/templates/login.html
@@ -48,7 +48,8 @@
                 {% else %}
                     <a href="/login?is_employee=true">Employee login?</a>
                 {%  endif %}
-            </small>
+                <a href="/direct?is_employee=false">Direct Customer login</a>
+             </small>
         </form>
 
     </div>
