--- a/bank/templates/about.html
+++ b/bank/templates/about.html
@@ -1,22 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
-	<p>Dette er UIS-prototypen bragt.. til... dig... af DIS-holdet 2022/2023:</p>
+	<p>Dette er UIS-prototypen bragt.. til... dig... af DIS-holdet 2023/2024:</p>
   <ul>
-    <li>Ana Carolina Brito de Almeida</li>
-		<li>Dmitri Trayel</li>
+    <li>Thomas Busk-Jepsen</li>
+	<li>Sara Selman</li>
+	<li>Naomi Knudsen</li>
+	<li>Mustafa Hekmat A. Alabdelamir</li>
+	<li>Maja Steenberg</li>
+    <li>Panagiotis Karras (Panos)</li>
+	<li>Harald Eskelund Franck</li>
+	<li>Rafael Castro Gonçalves Silva</li>
+	<li>Karl Skarsholm Risager</li>
+	<li>Dmitri Trayel</li>
     <li>Andreas Nørgaard Holm</li>
-    <li>Asbjørn Marco Sinius Munk</li>
-		<li>Axel Højmark</li>
-		<li>Cathy Michelmore</li>
-		<li>Christian Arboe Franck</li>
-		<li>Christian Mølholt Jensen</li>
     <li>Jan Rolandsen</li>
     <li>Anders Lassen</li>
-		<li>Karl Skarsholm Risager</li>
-		<li>Lennard Reese</li>
-		<li>Theo Rüter Würtzen</li>
-	</ul>
+  </ul>
 
 	<p>I kan registrere nye kundekonti, men medarbejderkonti skal indtastes ved at foretage jeres ændringer i DML-scriptet schema_ins.sql. For at logge ind har vi oprettet nogle testkonti. Kunde-login kan tilgås ved hjælp af et kunde-cpr i intervallerne 5001 til 5007 med adgangskoden "UIS" med store bogstaver. Medarbejder-login kan tilgås ved hjælp af medarbejder-id 6001..6007 og samme adgangskode.</p>
 	<p>For at tilføje flere eksempeldata skal du foretage dine ændringer i DML-scriptet schema_ins.sql.</p>
